fix long description text overflow

--- a/static/css/list.css
+++ b/static/css/list.css
@@ -23,6 +23,6 @@
 .detail{
     padding-left: 30px;
     text-align: left;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    word-wrap: break-word;
+    white-space: initial;
 }
